--- a/_sass/minimal-mistakes/skins/_default.scss
+++ b/_sass/minimal-mistakes/skins/_default.scss
@@ -3,3 +3,5 @@
    ========================================================================== */
 
 // Intentionally left blank
+
+@import "_custom";
