--- a/_sass/minimal-mistakes/skins/_custom.scss
+++ b/_sass/minimal-mistakes/skins/_custom.scss
@@ -1,24 +1,26 @@
-/* _custom.scss */
-
 .page__content {
   max-width: 700px;
   margin: 0 auto;
+  padding: 0 32px; // 데스크탑 기본 패딩
 }
 
 @media screen and (max-width: 1024px) {
   .page__content {
     max-width: 800px;
+    padding: 0 24px; // 태블릿 패딩
   }
 }
 
 @media screen and (max-width: 768px) {
   .page__content {
     max-width: 90%;
+    padding: 0 16px; // 모바일 패딩
   }
 }
 
 @media screen and (max-width: 480px) {
   .page__content {
     max-width: 95%;
+    padding: 0 8px; // 아주 작은 화면 패딩
   }
 }
